--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">
-                    <span data-en="Building the Future with AI" data-cn="用AI构建未来">Building the Future with AI</span>
+                <h1 class="hero-title" data-en="Building the Future with AI" data-cn="用AI构建未来">
+                    Building the Future with AI
                 </h1>
                 <p class="hero-description" data-en="Empowering innovation through cutting-edge AI solutions, intelligent automation, and seamless user experiences that transform the way we interact with technology." data-cn="通过前沿AI解决方案、智能自动化和无缝用户体验推动创新，改变我们与技术交互的方式。">
                     Empowering innovation through cutting-edge AI solutions, intelligent automation, 
@@ -179,26 +179,23 @@
     </section>
 
     <!-- About Us Section -->
-    <section id="about-us" class="features">
+    <section id="about-us" class="services">
         <div class="container">
             <h2 class="section-title" data-en="About Us" data-cn="关于我们">About Us</h2>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">🏢</div>
+            <div class="services-grid">
+                <div class="service-item">
                     <h3 data-en="ESM FBA/SCA Domain" data-cn="ESM FBA/SCA领域">ESM FBA/SCA Domain</h3>
                     <p data-en="Specialized expertise in ESM FBA and SCA domain operations, providing comprehensive solutions for fulfillment and supply chain automation." data-cn="在ESM FBA和SCA领域运营方面的专业知识，为履行和供应链自动化提供全面解决方案。">
                         Specialized expertise in ESM FBA and SCA domain operations, providing comprehensive solutions for fulfillment and supply chain automation.
                     </p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">👥</div>
+                <div class="service-item">
                     <h3 data-en="Domain Members" data-cn="领域成员">Domain Members</h3>
                     <p data-en="Our dedicated team of domain experts and specialists working together to deliver excellence in logistics and fulfillment operations." data-cn="我们专门的领域专家和专业人员团队共同努力，在物流和履行运营中提供卓越服务。">
                         Our dedicated team of domain experts and specialists working together to deliver excellence in logistics and fulfillment operations.
                     </p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🔧</div>
+                <div class="service-item">
                     <h3 data-en="Others" data-cn="其他">Others</h3>
                     <p data-en="Additional resources, tools, and support services to complement our core offerings and ensure comprehensive coverage of all logistics needs." data-cn="额外的资源、工具和支持服务，补充我们的核心产品，确保全面覆盖所有物流需求。">
                         Additional resources, tools, and support services to complement our core offerings and ensure comprehensive coverage of all logistics needs.
