--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <div class="nav-dropdown">
                     <a href="#fms-internal" class="nav-link dropdown-toggle" data-en="FMS Internal Resources ▼" data-cn="FMS内部资源 ▼">FMS Internal Resources ▼</a>
                     <div class="dropdown-content">
-                        <a href="https://quip-amazon.com/qZhUAzqYDDVe/2025-ESM-SCA-Domain-Seller-Learning-Intake-Form-Working-Mechanism#temp:C:HHa7dc238dda4e047739d69ff19f" target="_blank" data-en="Seller Learning 2025 VOS Intake" data-cn="卖家学习2025 VOS录入">Seller Learning 2025 VOS Intake</a>
-                        <a href="https://amazon.sharepoint.com/:x:/r/sites/ESMFBASCA/_layouts/15/Doc.aspx?sourcedoc=%7BF0F6574C-9EB8-4C07-83E6-5967BB8E8470%7D&file=2025%20ESM%20FBA%20SCA%20WorkPlan_COMBINED.xlsx&wdLOR=c9EC5CAD5-0482-4571-8DC8-C4476952AC1D&fromShare=true&action=default&mobileredirect=true" target="_blank" data-en="Domain Work Plan" data-cn="领域工作计划">Domain Work Plan</a>
-                        <a href="#process-guides" data-en="Process Guides" data-cn="流程指南">Process Guides</a>
+                        <a href="https://quip-amazon.com/qZhUAzqYDDVe/2025-ESM-SCA-Domain-Seller-Learning-Intake-Form-Working-Mechanism#temp:C:HHa7dc238dda4e047739d69ff19f" target="_blank" data-en="Seller Learning Intake Form" data-cn="卖家学习录入表单">Seller Learning Intake Form</a>
+                        <a href="https://amazon.sharepoint.com/:x:/r/sites/ESMFBASCA/_layouts/15/Doc.aspx?sourcedoc=%7BF0F6574C-9EB8-4C07-83E6-5967BB8E8470%7D&file=2025%20ESM%20FBA%20SCA%20WorkPlan_COMBINED.xlsx&wdLOR=c9EC5CAD5-0482-4571-8DC8-C4476952AC1D&fromShare=true&action=default&mobileredirect=true" target="_blank" data-en="ESM FBA SCA Work Plan" data-cn="ESM FBA SCA工作计划">ESM FBA SCA Work Plan</a>
+                        <a href="https://quip-amazon.com/FXFqAby5ZJlx/2025-SCA-Central-VoS-Bank#temp:C:IDZ6f84ae765c93407ab9b08b369" target="_blank" data-en="SCA Central VoS Bank" data-cn="SCA中央VoS银行">SCA Central VoS Bank</a>
+                        <a href="https://quip-amazon.com/EvlyAvg6JFNS/Global-AWD-Pilot-630#temp:C:URYd0b8d1d5b9b84877a9b74f36f" target="_blank" data-en="Global AWD Pilot 630" data-cn="全球AWD试点630">Global AWD Pilot 630</a>
                     </div>
                 </div>
                 <div class="nav-dropdown">
