Update Global AWD pilot name and add button links for Get Started and Learn More

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="https://quip-amazon.com/qZhUAzqYDDVe/2025-ESM-SCA-Domain-Seller-Learning-Intake-Form-Working-Mechanism#temp:C:HHa7dc238dda4e047739d69ff19f" target="_blank" data-en="Seller Learning Intake Form" data-cn="卖家学习录入表单">Seller Learning Intake Form</a>
                         <a href="https://amazon.sharepoint.com/:x:/r/sites/ESMFBASCA/_layouts/15/Doc.aspx?sourcedoc=%7BF0F6574C-9EB8-4C07-83E6-5967BB8E8470%7D&file=2025%20ESM%20FBA%20SCA%20WorkPlan_COMBINED.xlsx&wdLOR=c9EC5CAD5-0482-4571-8DC8-C4476952AC1D&fromShare=true&action=default&mobileredirect=true" target="_blank" data-en="ESM FBA SCA Work Plan" data-cn="ESM FBA SCA工作计划">ESM FBA SCA Work Plan</a>
                         <a href="https://quip-amazon.com/FXFqAby5ZJlx/2025-SCA-Central-VoS-Bank#temp:C:IDZ6f84ae765c93407ab9b08b369" target="_blank" data-en="SCA Central VoS Bank" data-cn="SCA中央VoS银行">SCA Central VoS Bank</a>
-                        <a href="https://quip-amazon.com/EvlyAvg6JFNS/Global-AWD-Pilot-630#temp:C:URYd0b8d1d5b9b84877a9b74f36f" target="_blank" data-en="Global AWD Pilot 630" data-cn="全球AWD试点630">Global AWD Pilot 630</a>
+                        <a href="https://quip-amazon.com/EvlyAvg6JFNS/Global-AWD-Pilot-630#temp:C:URYd0b8d1d5b9b84877a9b74f36f" target="_blank" data-en="Global AWD Pilot" data-cn="全球AWD试点">Global AWD Pilot</a>
                     </div>
                 </div>
                 <div class="nav-dropdown">
@@ -64,8 +64,8 @@
                     and seamless user experiences that transform the way we interact with technology.
                 </p>
                 <div class="hero-buttons">
-                    <button class="btn-primary" data-en="Get Started" data-cn="开始使用">Get Started</button>
-                    <button class="btn-secondary" data-en="Learn More" data-cn="了解更多">Learn More</button>
+                    <button class="btn-primary" data-en="Get Started" data-cn="开始使用" onclick="window.open('https://ask.qbusiness.aws.dev/#/chat', '_blank')">Get Started</button>
+                    <button class="btn-secondary" data-en="Learn More" data-cn="了解更多" onclick="window.open('https://docs.aws.amazon.com/amazonq/latest/business-use-dg/what-is.html', '_blank')">Learn More</button>
                 </div>
             </div>
             
